# workspace-python

./: .gitignore  LICENSE  README.md  api_documentation.html  pyproject.toml  setup.py  test_workspace.py  test_workspace.wsx
csiro_workspace/: __init__.py  bindings.py  config.py  workspace.cfg  workspace.py
tests/: test_workspace.py  test_workspace.wsx
